2007-09-27  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: added explicit --help handling for commands
	with special command-line handling (shell and run); patch by Callum
	McKenzie.  (closes: #477706)

2007-09-27  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: added informational message when using
	jhbuild run with a bad command name; patch by Callum McKenzie.
	(closes: #477712)

2007-09-25  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.20.modules:
	* modulesets/gnome-2.22.modules: Added libnotifymm.

2007-09-23  Vincent Untz  <vuntz@gnome.org>

	* modulesets/freedesktop-2.22.modules: new
	* modulesets/gnome-2.22.modules: depend on 2.22 modulesets, and not
	2.20 ones.

2007-09-23  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.22.modules: include 2.22 external dep
	modules, move pygtksourceview to desktop set.

2007-09-21  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* modulesets/gnome-2.20.modules: Use stable branch for NetworkManager and
	network-manager-applet.
	* modulesets/gnome-2.22.modules: Use trunk for NetworkManager and 
	network-manager-applet.

2007-09-21  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc, modulesets/gnome-2.22.modules,
	modulesets/gnome-external-deps-2.22.modules,
	modulesets/gnome-suites-2.22.modules: added modulesets for GNOME 2.22,
	and made it the default.

2007-09-21  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: fixed typo in dependencies tag.
	(catched by shaunm)

2007-09-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.20.modules: sabayon branched for
	gnome-2-20.

2007-09-19  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules: correct version for
	ekiga is 2.0.11 (file size / md5sum from previous commit were correct
	for 2.0.11).

2007-09-19  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.20.modules: bump ekiga version to
	2.0.10.
