@@ -1,5 +1,10 @@
 2007-09-27  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/base.py, jhbuild/frontends/terminal.py: completed
+	special handling for run command to also fix bug #375921.
+
+2007-09-27  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/base.py: added explicit --help handling for commands
 	with special command-line handling (shell and run); patch by Callum
 	McKenzie.  (closes: #477706)
